# vici_holdings_advanced

./: CMakeLists.txt  Q1.py  Q2.cpp  Q2.py  README.md
Q1_testcase/: Q1_test_cross_day.txt  Q1_test_dirty_data.txt  Q1_test_large_file.txt  Q1_test_no_violation.txt  Q1_test_one_violation.txt
